Updates gfx::Canvas scale command to accept float scale values

Currently gfx::Canvas does not accept float scale values, despite
cc::PaintCanvas providing the API to allow non integral scale values.

BUG=734684
COMPONENT=Gfx canvas

Review-Url: https://codereview.chromium.org/2943373002
Cr-Commit-Position: refs/heads/master@{#480873}

Former-commit-id: f03bf279dbfb0d8324cf4894fe357ff1b1ec690e