ui/gfx/canvas.h
@@ -191,7 +191,7 @@ class GFX_EXPORT Canvas {
 
   void Translate(const Vector2d& offset);
 
-  void Scale(int x_scale, int y_scale);
+  void Scale(float x_scale, float y_scale);
 
   // Fills the entire canvas' bitmap (restricted to current clip) with
   // specified |color| using a transfer mode of SkBlendMode::kSrcOver.
